grammar.js
        source_file: $ => repeat(seq($._declaration, $._newline)),



        ////////////////////////////////////////////////////////////////////////
        // Constants
        ////////////////////////////////////////////////////////////////////////

        _declaration_block: $ => block($, $._declaration),

        // Declarations0: use `optional($._declaration_block)` instead
        // _declaration_block0: $ => block($, optional($._declaration)),

        // Declaration
        _declaration: $ => choice(
            $.fields,
            $.function,
            $.data,
            $.data_signature,
            $.record,
            $.record_signature,
            $.infix,
            $.generalize,
            $.mutual,
            $.abstract,
            $.private,
            $.instance,
            $.macro,
            $.postulate,
            $.primitive,
            $.open,
            $.import,
            $.module_macro,
            $.module,
            $.pragma,
            $.syntax,
            $.pattern,
            $.unquote_decl,
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Field
        ////////////////////////////////////////////////////////////////////////

        // Fields
        function: $ => choice(
            seq(
                optional($.attributes),
                alias($.lhs_decl, $.lhs),
                alias(optional($.rhs_decl), $.rhs),
                optional($.where),
            ),
            seq(
                optional($.attributes),
                alias($.lhs_defn, $.lhs),
                alias(optional($.rhs_defn), $.rhs),
                optional($.where),
            ),
        ),

        // LHS
        infix: $ => seq(
            choice('infix', 'infixl', 'infixr'),
            $.integer,
            repeat1($.bid),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Generalize
        ////////////////////////////////////////////////////////////////////////

        postulate: $ => seq(
            'postulate',
            optional($._declaration_block)
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Primitive
        ////////////////////////////////////////////////////////////////////////

        open: $ => seq(
            'open',
            choice(
                $.import, $.module_name
            ),
            optional($._atoms),
            optional($._import_directives),
        ),
        import: $ => seq('import', $.module_name),


        // ModuleName
        module_name: $ => prec.left(alias($.qid, 'module_name')),

        // ImportDirectives and shit
        _import_directives: $ => repeat1($.import_directive),
        import_directive: $ => choice(
            'public',
            seq('using', '(', $._comma_import_names, ')'),
            seq('hiding', '(', $._comma_import_names, ')'),
            seq('renaming', '(', sepR(';', $.renaming), ')'),
            seq('using', '(', ')'),
            seq('hiding', '(', ')'),
            seq('renaming', '(', ')')
        ),

        // CommaImportNames
        _comma_import_names: $ => sepR(';', $._import_name),

        // Renaming
        pragma: $ => token(seq(
            '{-#',
            repeat(choice(
                /[^#]/,
                /#[^-]/,
                /#\-[^}]/,
            )),
            '#-}',
        )),

        // CatchallPragma
        id: $ => token(ID),

        // QId
        qid: $ => prec.left(alias(choice(QID, $.id), 'qid')),

        // BId
        bid: $ => alias(choice('_', $.id), 'bid'),

        // SpaceIds
        _binding_ids_and_absurds: $ => prec(-1, choice(
            $._application,
            seq($.qid, '=', $.qid),
            seq($.qid, '=', '_'),
            seq('-', '=', $.qid),
            seq('-', '=', '_'),
        )),

        // Attribute
        expr: $ => choice(
            seq($._typed_bindings, $.ARROW, $.expr),
            seq(optional($.attributes), $._atoms, $.ARROW, $.expr),
            seq($._with_exprs, '=', $.expr),
            prec(-1, $._with_exprs), // lowest precedence
        ),
        _with_exprs: $ => seq(
            repeat(seq($._atoms, '|')),
            $._application,
        ),
        _application: $ => seq(
            optional($._atoms),
            $._expr2,
        ),
        atom: $ => choice(
            $._atom_curly,
            $._atom_no_curly,
        ),
        // Application3 / OpenArgs
        _atoms: $ => repeat1($.atom),

        _atom_curly: $ => brace(optional($.expr)),

        _atom_no_curly: $ => choice(
            '_',
            'Prop',
            'Set',
            'quote',
            'quoteTerm',
            'quoteContext',
            'unquote',
            $.SetN,
            $.PropN,
            brace_double($.expr),
            idiom($.expr),
            seq('(', ')'),
            seq('{{', '}}'),
            seq('⦃', '⦄'),
            seq($.id, '@', $.atom),
            seq('.', $.atom),
            $.record_assignments,
            alias($.field_assignments, $.record_assignments),
            $.ELLIPSIS,
            $._expr_or_attr
        ),

        // ForallBindings
        forall: $ => seq($.FORALL, $._typed_untyped_bindings, $.ARROW, $.expr),

        // LetBody
        lambda: $ => seq(
            $.LAMBDA,
            $._lambda_bindings,
            $.ARROW,
            $.expr
        ),

        // LamBinds
        _lambda_bindings: $ => seq(
            repeat($._typed_untyped_binding),
            choice(
                $._typed_untyped_binding,
                seq('(', ')'),
                seq('{', '}'),
                seq('{{', '}}'),
                seq('⦃', '⦄'),
            ),
        ),

        // ExtendedOrAbsurdLam
        lambda_clause_absurd: $ => seq(
            optional($.catchall_pragma),
            $._application,
        ),

        // NonAbsurdLamClause
        lambda_clause: $ => seq(
            optional($.catchall_pragma),
            optional($._atoms),   // Application3PossiblyEmpty
            $.ARROW,
            $.expr,
        ),

        // DoStmts
        _typed_bindings: $ => repeat1($.typed_binding),
        typed_binding: $ => choice(
            maybeDotted(choice(
                paren($._application, ':', $.expr),
                brace($._binding_ids_and_absurds, ':', $.expr),
                brace_double($._binding_ids_and_absurds, ':', $.expr),
            )),
            paren($.attributes, $._application, ':', $.expr),
            brace($.attributes, $._binding_ids_and_absurds, ':', $.expr),
            brace_double($.attributes, $._binding_ids_and_absurds, ':', $.expr),
            paren($.open),
            paren('let', $._declaration_block),
        ),

        // TypedUntypedBindings1
        _typed_untyped_bindings: $ => repeat1($._typed_untyped_binding),
        untyped_binding: $ => choice( // 13 variants
            maybeDotted(choice(
                $.bid,
                brace($._binding_ids_and_absurds),
                brace_double($._binding_ids_and_absurds),
            )),
            paren($._binding_ids_and_absurds),
            paren($.attributes, $._binding_ids_and_absurds),
            brace($.attributes, $._binding_ids_and_absurds),
            brace_double($.attributes, $._binding_ids_and_absurds),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Literals
        ////////////////////////////////////////////////////////////////////////

        // -- Literals
        // <0,code> \'             { litChar }
        // <0,code,pragma_> \"     { litString }
        // <0,code> @integer       { literal LitNat }
        // <0,code> @float         { literal LitFloat }
        integer: $ => integer,
